# pick_and_place

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/arm/: CMakeLists.txt  package.xml
src/arm/launch/: scene.launch
src/arm/src/: application.cpp  fanuc_arm.cpp  pick_place_tutorial.cpp  simple_grasp.cpp  simple_move.cpp
src/arm/worlds/: point_cloud_scene.world
src/assembled_config/: .setup_assistant  CMakeLists.txt  package.xml
src/assembled_config/config/: assembled_robot.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
src/assembled_config/launch/: assembled_robot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/bigger_cr35_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bigger_cr35_config/config/: assembled_robot.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
src/bigger_cr35_config/launch/: assembled_robot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simulation.launch  trajectory_execution.launch.xml  warehouse.launch
src/fanuc_cr35ia_config/: .setup_assistant  CMakeLists.txt  package.xml
src/fanuc_cr35ia_config/config/: assembled_robot.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
src/fanuc_cr35ia_config/launch/: assembled_robot_moveit_controller_manager.launch.xml  demo.launch  (+16 more)
src/fanuc_description/: CMakeLists.txt  package.xml
src/panda_configuration/: .setup_assistant  CMakeLists.txt
src/urdf/: CMakeLists.txt  assembled_arm.xacro  package.xml
src/vision/: CMakeLists.txt  README  package.xml
utils/cr35ia/: model.config  model.sdf
utils/cr35ia_joints/: model.config  model.sdf
utils/kinect/: model.sdf
utils/pick_table/: model.config  model.sdf
utils/place_table/: model.config  model.sdf
(+34 files in other folders)
